# temporal-tui

./: .gitignore  README.md  pyproject.toml
temporal_tui/: __main__.py  app.py  models.py  service.py
temporal_tui/widgets/: __init__.py  workflow_input_and_results.py  workflow_relationships.py  workflow_summary.py  workflow_table.py  workflow_view.py
